--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -4,8 +4,8 @@ metadata:
   name: backend
   namespace: expense
 data:
-  #DB_HOST: mysql # mysql component service name
-  DB_HOST: db-dev.lingaiah.online
+  DB_HOST: mysql # mysql component service name
+  #DB_HOST: db-dev.lingaiah.online
 ---
 kind: Deployment
 apiVersion: apps/v1
