--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -119,7 +119,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: joindevops/frontend:v1.0    ## lingadevops/frontend:v1.0
+        image: lingadevops/frontend:v1.0    ## lingadevops/frontend:v1.0
         resources:
           requests:
             cpu: "100m"
