--- a/others/backend/manifest.yaml
+++ b/others/backend/manifest.yaml
@@ -38,7 +38,7 @@ spec:
          envFrom:
          - configMapRef:
              name: backend
-         resources: #added for HPA autoscalling in Kubernetes
+         resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
