--- a/others/frontend/manifest.yaml
+++ b/others/frontend/manifest.yaml
@@ -120,7 +120,7 @@ spec:
       containers:
       - name: frontend
         image: lingadevops/frontend:v1.0    ## lingadevops/frontend:v1.0
-        resources: # added for HPA autoscalling in Kubernetes
+        resources:
           requests:
             cpu: "100m"
             memory: "256Mi"
