--- a/debug/manifest.yaml
+++ b/debug/manifest.yaml
@@ -8,4 +8,5 @@ spec:
     - name: debug
       image: lingadevops/debug:v1.1
       
-    
+# kubectl exec -it debug -n expense -- /bin/bash
+# mysql -h mysql -u root -pExpenseApp@1
